crates/sotf-plugins/tests/snapshots/render_plan_snapshots__gain__gain__desktop_1000.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "gain",
  "width": 1000.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [],
  "main_groups": [
    {
      "title": "",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Gain",
          "control_type": "knob_large",
          "unit": "dB",
          "range": [
            -60.0,
            20.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
